--- a/packages/genui_server/package.json
+++ b/packages/genui_server/package.json
@@ -4,6 +4,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "node lib/index.js",
+    "genkit:start": "genkit start -- node lib/index.js",
     "genkit:dev": "genkit start -- tsx --watch src/index.ts",
     "compile": "tsc",
     "build": "npm run build:clean && npm run compile",
@@ -29,15 +30,18 @@
     "node": "^20.19.4",
     "node-fetch": "^3.3.2",
     "opentelemetry": "^0.1.0",
-    "zod": "^4.1.3"
+    "pino": "^9.9.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/mustache": "^4.2.6",
     "@types/uuid": "^9.0.8",
     "genkit": "^1.17.1",
+    "genkit-cli": "^1.17.1",
     "jest": "^30.1.1",
+    "pino-pretty": "^13.1.1",
     "ts-jest": "^29.4.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "uuid": "^9.0.1"
   },
