--- a/packages/genui_server/package.json
+++ b/packages/genui_server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint .",
     "genkit:start": "genkit start -- node lib/index.js",
-    "genkit:dev": "genkit start -- tsx --watch src/index.ts",
+    "genkit:dev": "genkit start -- tsx src/index.ts",
     "compile": "tsc",
     "build": "pnpm run build:clean && npm run compile",
     "build:clean": "rimraf ./lib",
